--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -5,6 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dagger2_example.MainActivity">
+    tools:context=".jetpack_archi_compo.room_db.RoomActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:onClick="getContact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Room DataBase"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="356dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
